--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TaskPilot is a robust and intuitive task management application, inspired by popular tools like Trello. This app allows teams and individuals to organize tasks, collaborate effectively, and manage projects with ease.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
