--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14",
-    "redis": "^4.6.14"
+    "redis": "^4.6.14",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
