--- a/client_side/package.json
+++ b/client_side/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "fetch": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4"
   },
