--- a/client_side/package.json
+++ b/client_side/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
