--- a/client_side/package.json
+++ b/client_side/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fetch": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
