--- a/server_side/package.json
+++ b/server_side/package.json
@@ -30,9 +30,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "redis": "^4.6.14",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
