--- a/server_side/package.json
+++ b/server_side/package.json
@@ -33,7 +33,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "redis": "^4.6.14",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
